--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
   </head>
 
   <body>
-    
+    <div style="width: 30%; padding: 4rem">
+      <div class="card card--primary">
+        <header class="card__header">Card Title</header>
+        <div class="card__body">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, et?
+        </div>
+    </div>
 
 
-
-    
+    </div>
   </body>
 </html>
