--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <title>Moshify - Go Online for Just $9</title>
   </head>
 
-  <body style="padding: 5rem">
+  <body>
    
+   
+
+
   </body>
 </html>
