--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
     <title>Moshify - Go Online for Just $9</title>
   </head>
+
+  <body>
+
+
     <header>
       <nav class="nav collapsible">
         <a class="nav__brand" href="/"><img src="images/logo.svg" alt="" /></a>
@@ -447,12 +451,12 @@
     <footer class="block block--dark footer">
       <div class="container grid footer__sections">
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <div class="icon icon--white collapsible__chevron">
               <img src="./icons/chevron.svg" alt=""/>
             </div>
-          </header>
+          </div>
           <div class="collapsible__content">
            <ul class="list">
              <li><a href="#">Website Hosting</a></li>
@@ -464,12 +468,12 @@
   
   
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <div class="icon icon--white collapsible__chevron">
               <img src="./icons/chevron.svg" alt=""/>
             </div>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">About</a></li>
@@ -482,12 +486,12 @@
   
   
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <div class="icon icon--white collapsible__chevron">
               <img src="./icons/chevron.svg" alt=""/>
             </div>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Contact</a></li>
@@ -498,12 +502,12 @@
         </section>
       
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <div class="icon icon--white collapsible__chevron">
               <img src="./icons/chevron.svg" alt=""/>
             </div>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Domain Checker</a></li>
@@ -524,7 +528,6 @@
 
 
 
-    <body>
     
     <script src="./js/main.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
