--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav class="nav collapsible">
         <a class="nav__brand" href="/"><img src="images/logo.svg" alt="" /></a>
           <svg class="icon icon--white nav__toggler">
-            <use xlink:href="icons/sprite.svg#menu"></use>
+            <use href="icons/sprite.svg#menu"></use>
           </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -85,7 +85,7 @@
   
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="icons/sprite.svg#search"></use>
+            <use href="icons/sprite.svg#search"></use>
             </svg>Search
         </button>
       </div>
@@ -188,7 +188,7 @@
         <div class="feature__content" data-aos="fade-up">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#easy"></use>
+              <use href="icons/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to Use</h3>
@@ -219,7 +219,7 @@
         <div class="feature__content" data-aos="fade-up">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#easy"></use>
+              <use href="icons/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Simply Fast Websites</h3>
@@ -250,7 +250,7 @@
         <div class="feature__content" data-aos="fade-up">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#wordpress"></use>
+              <use href="icons/sprite.svg#wordpress"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Wordpress Made Easy</h3>
@@ -278,7 +278,7 @@
         <div class="feature__content" data-aos="fade-up">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="icons/sprite.svg#easy"></use>
+              <use href="icons/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__heading">24/7 Expert Support</h3>
@@ -329,7 +329,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="icons/sprite.svg#computer"></use>
+                  <use href="icons/sprite.svg#computer"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -346,7 +346,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="icons/sprite.svg#growth"></use>
+                  <use href="icons/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -363,7 +363,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="icons/sprite.svg#wordpress"></use>
+                  <use href="icons/sprite.svg#wordpress"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -403,7 +403,7 @@
               />
               <span class="icon-container icon-container-accent">
                 <svg class="icon icon--white icon--small">
-                  <use xlink:href="icons/sprite.svg#quotes"></use>
+                  <use href="icons/sprite.svg#quotes"></use>
                 </svg>
               </span>
             </div>
@@ -417,7 +417,7 @@
                 <div class="media">
                   <div class="media__image">
                     <svg class="icon icon--primary quote__line">
-                      <use xlink:href="icons/sprite.svg#line"></use>
+                      <use href="icons/sprite.svg#line"></use>
                     </svg>
                   </div>
                   <div class="media__body">
